<resources>
    <string name="app_name">Wiki Movie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Wiki Movie</string>
    <string name="nav_header_subtitle">francivaldo.napoleao@dcx.ufpb.br</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Recommendations</string>
    <string name="menu_search">Search</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_about">About</string>

    <string name="home_second">Home Second</string>
    <string name="details">Details</string>

    <string name="title_label">Title</string>
    <string name="year_label">Year</string>
    <string name="rated_label">Rated</string>
    <string name="released_label">Released</string>
    <string name="runtime_label">Runtime</string>
    <string name="genre_label">Genre</string>
    <string name="plot_label">Plot</string>
    <string name="poster_description">Contains the cover photo of the selected movie</string>
    <string name="git_description">GitHub logo</string>
    <string name="description">Description</string>

    <string name="about">This application was developed in order to exercise the consumption
        of an API Rest, plus the learning of various components of the Android interface.</string>
    <string name="dev_by">Developed by: Francivaldo Napoleão</string>
    <string name="git_link">github.com/NapoleaoHerculano</string>
    <string name="version">V 1.0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
